--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "expressjs with mongodb",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ./routes/. ./middleware/."
   },
   "repository": {
     "type": "git",
@@ -28,5 +29,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.7",
     "normalize-port": "^1.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.1"
   }
 }
